--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@11ty/eleventy": "^1.0.1",
     "@11ty/eleventy-navigation": "^0.3.3",
     "sass": "^1.54.9"
+  },
+  "devDependencies": {
+    "luxon": "^3.2.1"
   }
 }
