--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/fkkehlet/bevae#readme",
   "dependencies": {
+    "@cubejs-client/core": "^0.31.0",
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
+    "chart.js": "^4.0.0",
     "sass": "^1.69.7"
   },
   "devDependencies": {
-    "luxon": "^3.4.4"
+    "luxon": "^3.4.4",
+    "parcel": "^2.6.2"
   }
 }
